fix: Correct project name spelling to "Fabryc"

--- a/examples/all_in_one.ipynb
+++ b/examples/all_in_one.ipynb
@@ -2,16 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Setup completed.\n"
+     ]
+    }
+   ],
    "source": [
-    "import fabric"
+    "import fabryc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -35,13 +43,13 @@
        " 'name': 'CORE - OPERATIONS [DEV]'}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from fabric.clients.rest import PowerBIRestClient\n",
+    "from fabryc.clients.rest import PowerBIRestClient\n",
     "\n",
     "client = PowerBIRestClient()\n",
     "client.get_group_by_name(workspace_name)"
@@ -49,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -269,23 +277,23 @@
        "4  {'autoSyncReadOnlyReplicas': True, 'maxReadOnl...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "datasets_df = fabric.list_datasets(workspace_name)\n",
+    "datasets_df = fabryc.list_datasets(workspace_name)\n",
     "datasets_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from fabric.workspace import Workspace\n",
+    "from fabryc.workspace import Workspace\n",
     "\n",
     "workspace = Workspace(workspace_name)"
    ]
@@ -301,16 +309,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from fabric import get_semantic_model"
+    "from fabryc import get_semantic_model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +338,7 @@
        "SemanticModel(workspace='CORE - OPERATIONS [DEV]', dataset='Core Dataset Activity Detail')"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +645,7 @@
        "31                                                     "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1123,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
